<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="0dp"
    android:gravity="bottom"
    tools:context="com.chekka.capstone.MainActivity">

    // LOG IN LAYOUT

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/whiteoverlay">


    <FrameLayout
        android:id="@+id/layout_signin"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="visible">
    <EditText
        android:id="@+id/EditTextEmail_L"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:background="@drawable/grayborder"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:textColor="#000"
        android:hint="@string/EnterEmail"
        android:layout_marginRight="30dp"

       />


        <EditText
            android:id="@+id/EditTextPassword_L"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:layout_below="@id/EditTextEmail_L"
            android:textColor="#000"
            android:hint="@string/EnterPassword"
            android:layout_marginRight="30dp"
        />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTextPassword_L"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="220dp"
            android:text="Forgot Password?"
            android:textColor="@color/color_2nddarker" />

    <TextView
        android:id="@+id/ButtonMForgotPasswordSignin_L"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditTextPassword_L"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="220dp"
        android:text="@string/Taphere"
        android:textColor="@color/lightblue" />

    <TextView
        android:id="@+id/ButtonMSignin_L"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/loginbnt"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="#fff"
        android:layout_below="@id/ButtonMForgotPasswordSignin_L"
        android:gravity="center_horizontal" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="340dp"
            android:textSize="16sp"
            android:text="Don't have an account?"
            android:textColor="@color/color_2nddarker"
            android:layout_below="@id/ButtonMSignin_L"/>
    <TextView
        android:id="@+id/ButtonMSignupSignin_L"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="360dp"
        android:textColor="@color/lightblue"
        android:text="@string/Registerhere"
        android:layout_below="@id/ButtonMSignin_L"/>
    </FrameLayout>

    // CONFIRMATION LAYOUT
    <FrameLayout
        android:id="@+id/layout_confirmation"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/ConfirmationNotes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:text="@string/NotesForgot"
            android:textColor="#000"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/EditTextConfirmationRecover_C"
            android:layout_below="@id/ConfirmationNotes"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="130dp"
            android:textColor="#000"
            android:hint="@string/EnterCode"
          />

        <TextView
            android:id="@+id/ButtonMSendRecoverConfirmation_C"
            android:layout_below="@id/EditTextConfirmationRecover_C"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/sendbtn"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_below="@id/ButtonMSendRecoverConfirmation_C"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="135dp"
            android:textColor="@color/color_2nddarker"
            android:textSize="16sp"
            android:text="Go to "/>
        <TextView
            android:id="@+id/ButtonMLoginRecoverConfirmation_C"
            android:layout_below="@id/ButtonMSendRecoverConfirmation_C"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="180dp"
            android:textColor="@color/lightblue"
            android:textSize="16sp"
            android:text="@string/login"/>
    </FrameLayout>

    // INPUT EMAIL FOR RECOVER
    <FrameLayout
        android:id="@+id/layout_inputemailforrecover"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/EmailNotes"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="50dp"
            android:text="@string/NotesEmail"
            android:textColor="#000"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/EditTextInputEmail_E"
            android:layout_below="@id/ConfirmationNotes"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:textColor="#000"
            android:hint="@string/EnterEmail_E"
          />

        <TextView
            android:id="@+id/ButtonMSendRecoverEmail_E"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/sendbtn"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:gravity="center_horizontal" />


    </FrameLayout>

    // SIGN UP LAYOUT

    <FrameLayout
        android:id="@+id/layout_signup"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/EditTextUserName_S"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:textColor="#000"
            android:hint="@string/EnterName"
           />

        <EditText
            android:id="@+id/EditTextEmail_S"
            android:inputType="textEmailAddress"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="140dp"
            android:textColor="#000"
            android:hint="@string/EnterEmail"
         />

        <EditText
            android:id="@+id/EditTextPassword_S"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="200dp"
            android:textColor="#000"
            android:hint="@string/EnterPassword"
          />

        <TextView
            android:id="@+id/ButtonMSignup_S"
            android:layout_height="54dp"
            android:layout_width="150dp"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/registerbtn"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />


    </FrameLayout>

    // SEND EMAIL
    <FrameLayout
        android:id="@+id/layout_sendemail"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:text="@string/NotesRegister"
            android:textColor="@color/color_2nddarker"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/EditTextEmailCode_SE"
            android:layout_height="50dp"
            android:layout_width="250dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="130dp"
            android:textColor="#000"
            android:hint="@string/EnterCode"
            android:layout_marginRight="30dp"
          />


        <TextView
            android:id="@+id/ButtonMSendEmailRegister_SE"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/sendbtn"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="130dp"
            android:textColor="@color/color_2nddarker"
            android:textSize="16sp"
            android:text="Go to "/>
        <TextView
            android:id="@+id/ButtonMLoginSendEmailRegister_SE"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="170dp"
            android:textColor="@color/lightblue"
            android:textSize="16sp"
            android:text="@string/login"/>
    </FrameLayout>

    // Two Password
    <FrameLayout
        android:id="@+id/layout_twopassword"
        android:layout_width="450dp"
        android:layout_height="500dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/EditTextNewPassword_T"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:textColor="#000"
            android:hint="Password"
          />

        <EditText
            android:id="@+id/EditTextConPassword_T"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:background="@drawable/grayborder"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="140dp"
            android:textColor="#000"
            android:hint="Re-type Password"
       />

        <TextView
            android:id="@+id/ButtonMConfirmPassword_T"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/confirmbtn"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:gravity="center_horizontal" />

    </FrameLayout>
    </RelativeLayout>
</RelativeLayout>